--- a/package.json
+++ b/package.json
@@ -105,6 +105,15 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^7.32.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-i18next": "^6.0.3",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^2.4.1",
     "concurrently": "^9.1.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
